opam-version: "1.2"
version: "0.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/opam-check-all"
dev-repo: "git://github.com/kit-ty-kate/opam-check-all.git"
bug-reports: "https://github.com/kit-ty-kate/opam-check-all/issues"
tags: ["opam" "check"]
build: ["dune" "build" "-p" name]
depends: [
  "dune" {build}
  "tyxml"
  "cohttp-lwt-unix"
  "containers" {>= "2.2"}
  "opam-core"
  "nocrypto"
  "cmdliner"
  "fpath"
  "re" {>= "1.7.2"}
  "git-unix" {>= "2.0"}
  "yaml"
  "obi"
  "ocaml-xdg-basedir"
]
