opam-version: "2.0"
version: "0.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/opam-check-all"
dev-repo: "git://github.com/kit-ty-kate/opam-check-all.git"
bug-reports: "https://github.com/kit-ty-kate/opam-check-all/issues"
tags: ["opam" "check"]
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "tyxml" {>= "4.3.0"}
  "cohttp-lwt-unix"
  "containers" {>= "2.2"}
  "opam-core"
  "nocrypto"
  "cmdliner"
  "fpath"
  "re" {>= "1.7.2"}
  "yaml" {>= "2.0.0"}
  "ocaml-xdg-basedir"
  "dockerfile"
  "lz4"
  "tls" # activate conduit with TLS for slack webhooks
]
synopsis: "A toolchain to check for broken opam packages"
