opam-version: "2.0"
version: "0.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/opam-health-check"
dev-repo: "git://github.com/kit-ty-kate/opam-health-check.git"
bug-reports: "https://github.com/kit-ty-kate/opam-health-check/issues"
tags: ["opam" "check"]
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml"
  "dune" {>= "1.0"}
  "tyxml" {>= "4.3.0"}
  "cohttp-lwt-unix"
  "containers" {>= "2.2"}
  "opam-core"
  "mirage-crypto-pk" {>= "0.7.0"}
  "mirage-crypto-rng" {>= "0.7.0"}
  "cmdliner"
  "fpath"
  "re" {>= "1.7.2"}
  "yaml" {>= "2.0.0"}
  "ocaml-xdg-basedir"
  "obuilder-spec"
  "lz4"
  "tls" {>= "0.12.0"} # activate conduit with TLS for slack webhooks
  "ocluster" # needed at runtime
  # TODO: add a conf-bc package (needed at runtime)
]
synopsis: "A toolchain to check for broken opam packages"
