opam-version: "2.0"
version: "0.1~"
license: "MIT"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
homepage: "https://github.com/kit-ty-kate/opam-health-check"
dev-repo: "git://github.com/kit-ty-kate/opam-health-check.git"
bug-reports: "https://github.com/kit-ty-kate/opam-health-check/issues"
tags: ["opam" "check"]
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "1.0"}
  "tyxml" {>= "4.3.0"}
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "containers" {>= "2.2"}
  "opam-core"
  "opam-format"
  "mirage-crypto-pk" {>= "0.7.0"}
  "mirage-crypto-rng" {>= "0.7.0"}
  "cmdliner"
  "fpath"
  "fmt" {>= "0.8.7"}
  "re" {>= "1.7.2"}
  "yaml" {>= "2.0.0"}
  "sexplib" {>= "v0.9.0"}
  "sexplib0" {>= "v0.9.0"}
  "ocaml-xdg-basedir"
  # "obuilder-spec" {>= "0.2"}
  "ocluster-api" {>= "0.1"}
  "github"
  "github-unix"
  "cstruct"
  "capnp-rpc"
  "capnp-rpc-lwt"
  "capnp-rpc-unix"
  "lwt"
  "uri"
  "tls" {>= "0.12.0"} # activate conduit with TLS for slack webhooks
  "conf-libev" # Required for lwt to avoid hitting the limits of select(2)
  "conf-pixz" # TODO: Make it a library
  # TODO: Add conf-ugrep
]
synopsis: "A toolchain to check for broken opam packages"
