(executable
  (name client)
  (public_name opam-check-all)
  (flags :standard -safe-string -w A-44-33-4 -open Containers)
  (libraries
    nocrypto
    cohttp-lwt-unix
    containers
    xdg-basedir
    oca_lib
    cmdliner
    yaml))

(rule
  (with-stdout-to config.ml
    (progn
      (echo "let name = {|opam-check-all|}\n")
      (echo "let version = {|%{version:opam-check-all}|}\n"))))
