(executable
  (name client)
  (public_name opam-health-check)
  (flags :standard -safe-string -w A-44-33-4 -open Containers)
  (libraries
    mirage-crypto-pk
    cohttp-lwt-unix
    containers
    xdg-basedir
    oca_lib
    cmdliner
    yaml))

(rule
  (with-stdout-to config.ml
    (progn
      (echo "let name = {|opam-health-check|}\n")
      (echo "let version = {|%{version:opam-health-check}|}\n"))))
