(executable
  (name main)
  (public_name opam-health-serve)
  (flags :standard -w A-44-33-4 -open Containers)
  (libraries backend lwt.unix containers cmdliner oca_server))

(rule
  (with-stdout-to config.ml
    (progn
      (echo "let name = {|opam-health-serve|}\n")
      (echo "let version = {|%{version:opam-health-check}|}\n"))))
