(library
  (name backend)
  (flags :standard -safe-string -w A-44-33-4 -open Containers)
  (libraries
    oca_lib
    fmt
    uri
    lwt
    lwt.unix
    fpath
    cohttp
    cohttp-lwt
    cohttp-lwt-unix
    sexplib
    sexplib0
    cstruct
    containers
    oca_server
    opam-core
    opam-format
    obuilder-spec
    ocluster-api
    ocaml-version
    capnp-rpc
    capnp-rpc-lwt
    capnp-rpc-unix
    github
    github-unix
    mirage-crypto-pk
    mirage-crypto-rng.lwt))
