(library
  (name backend)
  (flags :standard -open Containers)
  (libraries
    oca_lib
    fmt
    uri
    lwt
    lwt.unix
    fpath
    cohttp
    cohttp-lwt
    cohttp-lwt-unix
    conduit-lwt-unix
    sexplib
    sexplib0
    cstruct
    containers
    oca_server
    opam-core
    opam-format
    obuilder-spec
    ocluster-api
    capnp-rpc
    capnp-rpc-lwt
    capnp-rpc-unix
    github
    github-data
    github-unix
    mirage-crypto-pk
    mirage-crypto-rng.lwt
    result))
