(library
  (name backend)
  (libraries
    oca_lib
    fmt
    uri
    lwt
    lwt.unix
    fpath
    cohttp
    cohttp-lwt
    cohttp-lwt-unix
    docker_hub
    http-lwt-client
    cstruct
    containers
    oca_server
    opam-core
    opam-format
    obuilder-spec
    ocluster-api
    capnp-rpc
    capnp-rpc-lwt
    capnp-rpc-unix
    ; conduit-lwt-unix ; TODO: Remove this. Not required explicitly but uncomment if you use (implicit_transitive_deps false)
    ; result ; TODO: Remove this. Not required explicitly but uncomment if you use (implicit_transitive_deps false)
    github
    github-unix
    github-data
    mirage-crypto-pk
    mirage-crypto-rng-lwt))
