(library
  (name oca_server)
  (flags :standard -open Containers)
  (modules_without_implementation backend_intf)
  (libraries
    lwt
    lwt.unix
    tyxml
    tyxml.functor
    cohttp
    cohttp-lwt-unix
    conduit-lwt-unix
    opam-format
    containers
    fpath
    uri
    re
    current_ansi
    oca_lib))
